Fixed #52, fixed z-index of announcements when using top positioned nav bar.

--- a/style.css
+++ b/style.css
@@ -2004,9 +2004,9 @@ body>center:nth-of-type(2)
 	padding:0 10px;
 	position:absolute;
 	" + $SS.conf["Sidebar Position String"] + ":265px!important;
-    top:" + ($SS.conf["Navigation Bar Position"] === 1 ? 18 : 0) + "px;
+    top:" + ($SS.conf["Navigation Bar Position"] === 1 ? 19 : 0) + "px;
 	white-space:nowrap;
-	z-index:10;
+	z-index:12;
 	" + ($SS.conf["Layout"] !== 1 ? "border-radius:" + ($SS.conf["Sidebar Position"] !== 2 ? "0 0 0 3px " : "0 0 3px 0") : "") + ";
 	-webkit-transition:all .2s ease-in-out;
 	-moz-transition:all .2s ease-in-out;
